# libdshowcapture

./: .gitignore  .gitmodules  CMakeLists.txt  README  dshowcapture.hpp
source/: CoTaskMemPtr.hpp  ComPtr.hpp  avermedia-encode.h  capture-filter.cpp  capture-filter.hpp  device-vendor.cpp  device.cpp  device.hpp  dshow-base.cpp  dshow-base.hpp  dshow-demux.cpp  dshow-demux.hpp  dshow-device-defs.hpp  dshow-encoded-device.cpp  dshow-enum.cpp  dshow-enum.hpp  dshow-formats.cpp  dshow-formats.hpp  dshow-hd-pvr-rocket.cpp  dshow-hd-pvr1.cpp  dshow-hd-pvr2.cpp  dshow-media-type.cpp  dshow-media-type.hpp  dshow-roxio.cpp  dshowcapture.cpp  dshowencode.cpp  encoder.cpp  encoder.hpp  log.cpp  log.hpp  output-filter.cpp  output-filter.hpp
vs/2013/dshowcapture/: dshowcapture.vcxproj  dshowcapture.vcxproj.filters
